--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+#addig config.py file
+config.py
+#adding additional files
+api_practice.ipynb
+random_numbers.ipynb
